Update my_town_detail_technical.md